remoção de credenciais

--- a/api/.env
+++ b/api/.env
@@ -1,9 +1,9 @@
 PORT=5000
-DB=mongodb+srv://general:general@cluster0.vgsynxa.mongodb.net/pawDB
-DB_User=general
-DB_Password=general
+DB=DBMONGOAPIKEY
+DB_User=DBUSER
+DB_Password=DBPASSSWORD
 DB_AuthSource=admin
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=465
 EMAIL_USER=reciclatextilcomercial@gmail.com
-EMAIL_PASS=mmpcrrlwdbwdqaks
+EMAIL_PASS=EMAILSMTPPASS
